# wikipedia-tests

./: .env.bstack  .env.example  .env.local_emulator  .env.local_real_device  .env.local_web  .gitignore  README.md  config.py  pyproject.toml  settings.py
allure-results/: 2314d1a0-74b6-4039-979e-d048ca11451d-result.json  5672a548-b5a0-474d-b3b6-31bcdc642a06-container.json  5b018a9a-f117-40a1-aeee-d1fa77b05d1e-container.json  63d94edf-de75-49fb-99c2-4e39b099d3a3-attachment.html  76f02fdf-3efc-473f-ad18-583c2bf0201c-container.json  888017e8-9ed9-48d7-8be7-a3668b4a3dfe-attachment.xml  8b0f4833-74c0-4ecc-9d73-be2d894153a8-attachment.html  b55b3614-2bca-40f3-bcac-ad36478f74fa-result.json  c648f9ce-b606-4579-9463-278ccfd30461-attachment.xml  e5ae47ea-b764-449b-8435-f2568dd90f04-container.json
tests/: conftest.py
tests/android/: test_wikipedia.py
tests/web/: test_wikipedia.py
tests/web/allure-results/: 0835dcbf-ebec-4403-ad78-3e4cac945b34-result.json  71b49e54-d54a-41d9-ae52-108725255778-container.json
wikipedia_tests/utils/: allure.py  file.py
